# Mapala

./: README.md  build_exe.py  build_macos_app.py  build_macos_dmg.sh  mapala.command  pyproject.toml  requirements.txt
.github/workflows/: release.yml
src/mapala/: __init__.py  __main__.py  app.py  config.py  io_excel.py  main_window.py  template_builder.py  template_builder_legacy.py
src/mapala/screens/: mapping_screen.py
